--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,28 +1,22 @@
-FROM alpine:3.16
+FROM docker.io/library/alpine:3.21.2
 
-LABEL version="0.1.0"
-LABEL description="Webhook Library"
-LABEL maintainer="Takamichi Seki <takamichi.seki@elfincafe.com>"
+ENV TZ Asia/Tokyo
+ENV EDITOR vi
+ENV STAGE dev
+ENV PS1 "[\A]\u@hooka:\W\\$ "
+ENV GOPATH /usr/local/webhook
+ENV PATH ${GOPATH}/bin:${PATH}
 
-RUN apk update && apk upgrade && apk add doas vim tzdata go 
-RUN cp /usr/share/zoneinfo/Asia/Tokyo /etc/localtime
-RUN apk del tzdata
-RUN rm -f /var/cache/apk/*
+RUN apk update && \
+    apk add doas vim tzdata go && \
+    rm -f /var/cache/apk/* && \
+    adduser -u 2000 -D -h /home/dev -G users dev && \
+    addgroup dev wheel && \
+    echo -e "permit nopass :root¥npermit nopass :wheel¥n" > /etc/doas.d/doas.conf && \
+    mkdir -p "${GOPATH}/pkg" "${GOPATH}/bin" && \
+    chown -R dev:users "${GOPATH}/pkg" "${GOPATH}/bin"
 
-RUN addgroup -g 2000 dev
-RUN adduser -u 2000 -D -h /home/zlkv -G dev zlkv
-RUN addgroup zlkv wheel
-RUN echo "permit nopass :root" >> /etc/doas.d/doas.conf
-RUN echo "permit nopass :wheel" >> /etc/doas.d/doas.conf
-ENV GOPATH /var/opt
-ENV PATH $GOPATH/bin:$PATH
-RUN mkdir -p "$GOPATH/pkg" "$GOPATH/bin" && chown -R zlkv:dev "$GOPATH/pkg" "$GOPATH/bin"
-WORKDIR $GOPATH/src
-RUN touch ~/.profile
-RUN echo 'export PS1="[\A]\u@webhook:\W\\$ "' >> ~/.profile
-USER zlkv
-RUN touch ~/.profile
-RUN echo 'export PS1="[\A]\u@webhook:\W\\$ "' >> ~/.profile
+USER dev
 RUN go install golang.org/x/tools/cmd/goimports@latest
-
+WORKDIR ${GOPATH}/src
 
